# stores-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  ReadME.md  docker-entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 0e12da189559_.py  1b58232fb804_.py  6081cd6f9544_.py  c9504950152d_.py
stores/: app.py
stores/extensions/: auth.py  config.py  database.py  messages.py  schemas.py  tasks.py
stores/resources/: departments.py  products.py  stores.py  user.py
stores/templates/emails/: register.html
